--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -16,6 +16,7 @@
         android:ems="10"
         android:hint="Phone No"
         android:inputType="phone"
+        android:maxLength="10"
         android:textAlignment="center"
         android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
